# zpl2usb

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/skills/run-zpl2usb/: SKILL.md  driver.py
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-07-11-zpl2usb-design.md
examples/: sample_100x40.zpl
packaging/: build.py  zpl2usb.spec
tests/: test_app_autostart.py  test_autostart.py  test_config.py  test_examples.py  test_gui.py  test_gui_window.py  test_jobs.py  test_netutil.py  test_printers.py  test_renderer.py  test_router.py  test_server.py
tools/: render_zpl.py
zpl2usb/: __init__.py  __main__.py  app.py  autostart.py  config.py  jobs.py  netutil.py  printers.py  router.py  server.py
zpl2usb/gui/: __init__.py  formstate.py  icon.py  tray.py  window.py
zpl2usb/renderer/: __init__.py  barcodes.py  fonts.py  interpreter.py  parser.py  units.py
